fix: swiper gap & add touch action

--- a/src/styles/components/swiper.scss
+++ b/src/styles/components/swiper.scss
@@ -2,6 +2,7 @@
   $this: &;
 
   overflow: hidden;
+  touch-action: pan-y;
 
   &-wrapper {
     display: grid;
